<resources>
    <string name="app_name" translatable="false">RedditSP</string>
    <string name="firstrun_login_title">Log in</string>
    <string name="firstrun_login_message">You are not currently logged in. You can access the account list by selecting "Accounts" from the menu.</string>
    <string name="firstrun_login_button_now">Log in now</string>
    <string name="firstrun_login_button_later">Be anonymous</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_category_behaviour">Behaviour</string>
    <string name="prefs_category_cache">Cache</string>
    <string name="prefs_category_menus">Menus</string>
    <string name="pref_appearance_theme_header">Theme</string>
    <string name="pref_appearance_font_header">Font</string>
    <string name="pref_appearance_thumbnails_header">Thumbnails</string>
    <string name="pref_appearance_tabletmode_header">Tablet Mode</string>
    <string name="pref_appearance_comments_header">Comments</string>
	<string name="pref_appearance_twopane_key" translatable="false">pref_appearance_twopane</string>
    <string name="pref_appearance_twopane_title">Tablet Mode (two pane)</string>
    <string name="pref_appearance_theme_key" translatable="false">pref_appearance_theme</string>
    <string name="pref_appearance_theme_title">Theme</string>
	<string name="pref_appearance_fontscale_posts_key" translatable="false">pref_appearance_fontscale_posts</string>
    <string name="pref_appearance_fontscale_posts_title">Posts Font Scale</string>
    <string name="pref_appearance_fontscale_comments_key" translatable="false">pref_appearance_fontscale_comments</string>
    <string name="pref_appearance_fontscale_comments_title">Comments Font Scale</string>
    <string name="pref_appearance_thumbnails_show_key" translatable="false">pref_appearance_thumbnails_show</string>
    <string name="pref_appearance_thumbnails_show_title">Show thumbnails</string>
    <string name="pref_appearance_thumbnails_nsfw_show_key" translatable="false">pref_appearance_thumbnails_nsfw_show</string>
    <string name="pref_appearance_thumbnails_nsfw_show_title">Show NSFW thumbnails</string>
    <string name="pref_appearance_thumbnails_wifionly_key" translatable="false">pref_appearance_thumbnails_wifionly</string>
    <string name="pref_appearance_thumbnails_wifionly_title">Thumbnails on Wi-Fi only</string>
	<string name="pref_appearance_comment_header_items_key" translatable="false">pref_appearance_comment_header_items</string>
    <string name="pref_appearance_comment_header_items_title">Comment Header</string>
    <string name="pref_behaviour_notifications_key" translatable="false">pref_behaviour_notifications</string>
    <string name="pref_behaviour_notifications_title">Notifications</string>
    <string name="pref_behaviour_actions_post_header">Post Actions</string>
    <string name="pref_behaviour_actions_comment_header">Comment Actions</string>
    <string name="pref_behaviour_posts_header">Posts</string>
    <string name="pref_behaviour_fling_post_left_key" translatable="false">pref_behaviour_fling_post_left</string>
    <string name="pref_behaviour_fling_post_left_title">Fling Post Left Action</string>
    <string name="pref_behaviour_fling_post_right_key" translatable="false">pref_behaviour_fling_post_right</string>
    <string name="pref_behaviour_fling_post_right_title">Fling Post Right Action</string>
    <string name="pref_behaviour_actions_comment_tap_key" translatable="false">pref_behaviour_actions_comment_tap</string>
    <string name="pref_behaviour_actions_comment_tap_title">Comment Tap Action</string>
    <string name="pref_behaviour_nsfw_key" translatable="false">pref_behaviour_nsfw</string>
    <string name="pref_behaviour_nsfw_title">Show NSFW content</string>
    <string name="pref_cache_pruning">Cache Pruning</string>
    <string name="pref_cache_maxage_listing_key" translatable="false">pref_cache_maxage_listing</string>
    <string name="pref_cache_maxage_listing_title">Delete cached listings after</string>
    <string name="pref_cache_maxage_thumb_key" translatable="false">pref_cache_maxage_thumb</string>
    <string name="pref_cache_maxage_thumb_title">Delete cached thumbnails after</string>
    <string name="pref_cache_maxage_image_key" translatable="false">pref_cache_maxage_image</string>
    <string name="pref_cache_maxage_image_title">Delete cached images after</string>
    <string name="pref_cache_precache_images_header">Precache Images</string>
    <string name="pref_cache_precache_images_key" translatable="false">pref_cache_precache_images</string>
    <string name="pref_cache_precache_images_title">Precache images</string>
    <string name="pref_cache_precache_images_wifionly_key" translatable="false">pref_cache_precache_images_wifionly</string>
    <string name="pref_cache_precache_images_wifionly_title">On Wi-Fi only</string>
    <string name="pref_menus_post_context_items_key" translatable="false">pref_menus_post_context_items_2</string>
    <string name="pref_menus_post_context_items_title">Post Context Menu Items</string>
    <string name="pref_menus_post_toolbar_items_key" translatable="false">pref_menus_post_toolbar_items</string>
    <string name="pref_menus_post_toolbar_items_title">Post Toolbar Items</string>
    <string name="options_accounts">Accounts</string>
    <string name="options_accounts_long">Reddit Accounts</string>
    <string name="options_theme">Themes</string>
    <string name="options_settings">Settings</string>
    <string name="options_submit_post">Submit Post</string>
    <string name="options_refresh">Refresh</string>
    <string name="options_refresh_subreddits">Refresh Subreddits</string>
    <string name="options_refresh_posts">Refresh Posts</string>
    <string name="options_refresh_comments">Refresh Comments</string>
	<string name="options_sort">Sort</string>
	<string name="options_sort_posts">Sort Posts</string>
    <string name="options_sort_comments">Sort Comments</string>
    <string name="mainmenu_frontpage">Front Page</string>
    <string name="mainmenu_all">All Subreddits</string>
	<string name="mainmenu_custom_invalid_name">Invalid subreddit name.</string>
    <string name="mainmenu_saved">Saved Posts</string>
    <string name="mainmenu_inbox">Inbox</string>
    <string name="mainmenu_profile">My Profile</string>
    <string name="listing_cached">Viewing cached copy from %s</string>
    <string name="accounts_anon">Anonymous</string>
    <string name="accounts_active">Active</string>
    <string name="accounts_add">Add Reddit Account</string>
    <string name="accounts_setactive">Make Active</string>
	<string name="accounts_delete">Delete</string>
    <string name="accounts_loggingin">Logging in…</string>
    <string name="accounts_loggingin_msg">Just a moment…</string>
    <string name="accounts_username">Username</string>
    <string name="accounts_password">Password</string>
    <string name="accounts_login">Login</string>
    <string name="accounts_delete_sure">Are you sure you want to delete this account?</string>
    <string name="post_submit_title_hint">Title</string>
    <string name="post_submit_subreddit_hint">Subreddit</string>
    <string name="pref_behaviour_commentsort_key" translatable="false">pref_behaviour_commentsort</string>
    <string name="pref_behaviour_commentsort">Default Comment Sort</string>
    <string name="pref_behaviour_sort_header">Sorting</string>
    <string name="pref_appearance_locale_header">Locale</string>
    <string name="pref_appearance_langforce_key" translatable="false">pref_appearance_langforce_key</string>
    <string name="pref_appearance_langforce_title">Language</string>
    <string name="pref_behaviour_postcount_title">Restrict post count</string>
    <string name="pref_behaviour_postcount_key" translatable="false">pref_behaviour_postcount</string>
    <string name="pref_menus_mainmenu_useritems_key" translatable="false">pref_menus_mainmenu_useritems</string>
    <string name="pref_menus_mainmenu_useritems_title">Main Menu User Items</string>
    <string name="pref_behaviour_screenorientation_title">Screen Orientation</string>
    <string name="pref_behaviour_screenorientation_key" translatable="false">pref_behaviour_screenorientation</string>
    <string name="pref_menus_optionsmenu_items_key" translatable="false">pref_menus_optionsmenu_items_3</string>
    <string name="pref_menus_optionsmenu_items_title">Options Menu Items</string>
    <string name="pref_appearance_fontscale_inbox_key" translatable="false">pref_appearance_fontscale_inbox</string>
    <string name="pref_appearance_fontscale_inbox_title">Inbox Font Scale</string>
    <string name="pref_appearance_hide_username_main_menu_key" translatable="false">pref_appearance_hide_username_main_menu</string>
    <string name="pref_appearance_hide_username_main_menu_title">Hide username in main menu</string>
    <string name="pref_behaviour_gallery_swipe_length_title">Gallery Swipe Length</string>
    <string name="pref_behaviour_gallery_swipe_length_key" translatable="false">pref_behaviour_gallery_swipe_length</string>
    <string name="pref_cache_precache_comments_header">Precache Comments</string>
    <string name="pref_cache_precache_comments_key" translatable="false">pref_cache_precache_comments</string>
    <string name="pref_cache_precache_comments_title">Precache comments</string>
    <string name="pref_cache_precache_comments_wifionly_key" translatable="false">pref_cache_precache_comments_wifionly</string>
    <string name="pref_cache_precache_comments_wifionly_title">On Wi-Fi only</string>
	<string name="pref_behaviour_actions_comment_longclick_key" translatable="false">pref_behaviour_actions_comment_longclick</string>
	<string name="pref_behaviour_actions_comment_longclick_title">Comment Long Click Action</string>
	<string name="pm_send_hint_recipient">Recipient</string>
	<string name="pm_send_hint_subject">Subject</string>
	<string name="pm_send_hint_message_text">Message text</string>
	<string name="pref_behaviour_fling_comment_left_key" translatable="false">pref_behaviour_fling_comment_left</string>
	<string name="pref_behaviour_fling_comment_left_title">Fling Comment Left Action</string>
	<string name="pref_behaviour_fling_comment_right_key" translatable="false">pref_behaviour_fling_comment_right</string>
	<string name="pref_behaviour_fling_comment_right_title">Fling Comment Right Action</string>
	<string name="pref_behaviour_postsort_key" translatable="false">pref_behaviour_postsort</string>
	<string name="pref_behaviour_postsort">Default Post Sort</string>
	<string name="pref_behaviour_share_permalink_key" translatable="false">pref_behaviour_share_permalink</string>
	<string name="pref_behaviour_share_permalink_title">Share as permalink</string>
	<string name="pref_cache_general_header">General</string>
	<string name="pref_cache_location_key" translatable="false">pref_cache_location</string>
	<string name="pref_cache_location_title">Cache storage location</string>
	<string name="pref_appearance_show_blocked_subreddits_main_menu_key" translatable="false">pref_appearance_show_blocked_subreddits_main_menu</string>
	<string name="pref_appearance_show_blocked_subreddits_main_menu_title">Show blocked subreddits in main menu</string>
	<string name="pref_cache_rerequest_postlist_age_key" translatable="false">pref_cache_rerequest_postlist_age</string>
	<string name="pref_cache_rerequest_postlist_age_title">Refresh posts if cache older than</string>
	<string name="send_replies_to_inbox">Send replies to my inbox</string>
	<string name="pref_menus_link_context_items_key" translatable="false">pref_menus_link_context_items</string>
	<string name="pref_menus_link_context_items_title">Link Context Menu Items</string>
	<string name="pref_menus_subreddit_context_items_key" translatable="false">pref_menus_subreddit_context_items</string>
	<string name="pref_menus_subreddit_context_items_title">Subreddit Context Menu Items</string>
</resources>