<?xml version="1.0" encoding="utf-8"?>

<!--
 This file was either copied or modified from https://github.com/QuantumBadger/RedReader
 under the Free Software Foundation General Public License version 3*/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cache_general_header">

        <Preference android:title="@string/pref_cache_location_title"
                    android:key="@string/pref_cache_location_key"/>

		<ListPreference android:title="@string/pref_cache_rerequest_postlist_age_title"
						android:key="@string/pref_cache_rerequest_postlist_age_key"
						android:entries="@array/pref_cache_autorefresh_age"
						android:entryValues="@array/pref_cache_autorefresh_age_return"
						android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_precache_images_header">

    <CheckBoxPreference android:title="@string/pref_cache_precache_images_title"
                        android:key="@string/pref_cache_precache_images_key"
                        android:defaultValue="true"/>

    <CheckBoxPreference android:title="@string/pref_cache_precache_images_wifionly_title"
                        android:key="@string/pref_cache_precache_images_wifionly_key"
                        android:dependency="@string/pref_cache_precache_images_key"
                        android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_precache_comments_header">

        <CheckBoxPreference android:title="@string/pref_cache_precache_comments_title"
                            android:key="@string/pref_cache_precache_comments_key"
                            android:defaultValue="true"/>

        <CheckBoxPreference android:title="@string/pref_cache_precache_comments_wifionly_title"
                            android:key="@string/pref_cache_precache_comments_wifionly_key"
                            android:dependency="@string/pref_cache_precache_comments_key"
                            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_pruning">

    <ListPreference android:title="@string/pref_cache_maxage_listing_title"
                    android:key="@string/pref_cache_maxage_listing_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="168"/>

    <ListPreference android:title="@string/pref_cache_maxage_thumb_title"
                    android:key="@string/pref_cache_maxage_thumb_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="168"/>

    <ListPreference android:title="@string/pref_cache_maxage_image_title"
                    android:key="@string/pref_cache_maxage_image_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="72"/>

    </PreferenceCategory>

</PreferenceScreen>
