<?xml version="1.0" encoding="utf-8"?>

<!--
 This file was either copied or modified from https://github.com/QuantumBadger/RedReader
 under the Free Software Foundation General Public License version 3*/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference android:title="@string/pref_behaviour_gallery_swipe_length_title"
                    android:key="@string/pref_behaviour_gallery_swipe_length_key"
                    android:entries="@array/pref_behaviour_gallery_swipe_length_array"
                    android:entryValues="@array/pref_behaviour_gallery_swipe_length_array_return"
                    android:defaultValue="150" />

    <CheckBoxPreference android:title="@string/pref_behaviour_notifications_title"
                        android:key="@string/pref_behaviour_notifications_key"
                        android:defaultValue="false"/>

    <ListPreference android:title="@string/pref_behaviour_screenorientation_title"
                    android:key="@string/pref_behaviour_screenorientation_key"
                    android:entries="@array/pref_behaviour_screenorientation_array"
                    android:entryValues="@array/pref_behaviour_screenorientation_array_return"
                    android:defaultValue="auto" />

    <PreferenceCategory android:title="@string/pref_behaviour_sort_header">

		<ListPreference android:title="@string/pref_behaviour_postsort"
						android:key="@string/pref_behaviour_postsort_key"
						android:entries="@array/pref_behaviour_postsort_array"
						android:entryValues="@array/pref_behaviour_postsort_array_return"
						android:defaultValue="hot"/>

        <ListPreference android:title="@string/pref_behaviour_commentsort"
                        android:key="@string/pref_behaviour_commentsort_key"
                        android:entries="@array/pref_behaviour_commentsort_array"
                        android:entryValues="@array/pref_behaviour_commentsort_array_return"
                        android:defaultValue="top"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_behaviour_actions_post_header">

        <ListPreference android:title="@string/pref_behaviour_fling_post_left_title"
                        android:key="@string/pref_behaviour_fling_post_left_key"
                        android:entries="@array/pref_behaviour_fling_post_actions"
                        android:entryValues="@array/pref_behaviour_fling_post_actions_return"
                        android:defaultValue="downvote"/>

        <ListPreference android:title="@string/pref_behaviour_fling_post_right_title"
                        android:key="@string/pref_behaviour_fling_post_right_key"
                        android:entries="@array/pref_behaviour_fling_post_actions"
                        android:entryValues="@array/pref_behaviour_fling_post_actions_return"
                        android:defaultValue="upvote"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_behaviour_actions_comment_header">

        <ListPreference android:title="@string/pref_behaviour_actions_comment_tap_title"
                        android:key="@string/pref_behaviour_actions_comment_tap_key"
                        android:entries="@array/pref_behaviour_actions_comment"
                        android:entryValues="@array/pref_behaviour_actions_comment_return"
                        android:defaultValue="collapse"/>

		<ListPreference android:title="@string/pref_behaviour_actions_comment_longclick_title"
						android:key="@string/pref_behaviour_actions_comment_longclick_key"
						android:entries="@array/pref_behaviour_actions_comment"
						android:entryValues="@array/pref_behaviour_actions_comment_return"
						android:defaultValue="action_menu"/>

		<ListPreference android:title="@string/pref_behaviour_fling_comment_left_title"
						android:key="@string/pref_behaviour_fling_comment_left_key"
						android:entries="@array/pref_behaviour_fling_comment_actions"
						android:entryValues="@array/pref_behaviour_fling_comment_actions_return"
						android:defaultValue="downvote"/>

		<ListPreference android:title="@string/pref_behaviour_fling_comment_right_title"
						android:key="@string/pref_behaviour_fling_comment_right_key"
						android:entries="@array/pref_behaviour_fling_comment_actions"
						android:entryValues="@array/pref_behaviour_fling_comment_actions_return"
						android:defaultValue="upvote"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_behaviour_posts_header">

        <CheckBoxPreference android:title="@string/pref_behaviour_nsfw_title"
                            android:key="@string/pref_behaviour_nsfw_key"
                            android:defaultValue="false"/>

		<CheckBoxPreference android:title="@string/pref_behaviour_share_permalink_title"
				android:key="@string/pref_behaviour_share_permalink_key"
				android:defaultValue="false"/>

        <ListPreference android:title="@string/pref_behaviour_postcount_title"
                        android:key="@string/pref_behaviour_postcount_key"
                        android:entries="@array/pref_behaviour_postcount_items"
                        android:entryValues="@array/pref_behaviour_postcount_items_return"
                        android:defaultValue="ALL"/>

    </PreferenceCategory>

</PreferenceScreen>
