<?xml version="1.0" encoding="utf-8"?>

<!--
 This file was either copied or modified from https://github.com/QuantumBadger/RedReader
 under the Free Software Foundation General Public License version 3*/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_appearance_theme_header">

        <ListPreference android:title="@string/pref_appearance_theme_title"
                        android:key="@string/pref_appearance_theme_key"
                        android:entries="@array/pref_appearance_theme"
                        android:entryValues="@array/pref_appearance_theme_return"
                        android:defaultValue="red"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appearance_locale_header">

        <ListPreference android:title="@string/pref_appearance_langforce_title"
                        android:key="@string/pref_appearance_langforce_key"
                        android:entries="@array/pref_appearance_langforce"
                        android:entryValues="@array/pref_appearance_langforce_return"
                        android:defaultValue="auto"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appearance_font_header">

        <ListPreference android:title="@string/pref_appearance_fontscale_posts_title"
                        android:key="@string/pref_appearance_fontscale_posts_key"
                        android:entries="@array/pref_appearance_fontscale"
                        android:entryValues="@array/pref_appearance_fontscale_return"
                        android:defaultValue="1"/>

        <ListPreference android:title="@string/pref_appearance_fontscale_comments_title"
                        android:key="@string/pref_appearance_fontscale_comments_key"
                        android:entries="@array/pref_appearance_fontscale"
                        android:entryValues="@array/pref_appearance_fontscale_return"
                        android:defaultValue="1"/>

        <ListPreference android:title="@string/pref_appearance_fontscale_inbox_title"
                        android:key="@string/pref_appearance_fontscale_inbox_key"
                        android:entries="@array/pref_appearance_fontscale"
                        android:entryValues="@array/pref_appearance_fontscale_return"
                        android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appearance_thumbnails_header">

        <CheckBoxPreference android:title="@string/pref_appearance_thumbnails_show_title"
                            android:key="@string/pref_appearance_thumbnails_show_key"
                            android:defaultValue="true"/>

        <CheckBoxPreference android:title="@string/pref_appearance_thumbnails_nsfw_show_title"
                            android:key="@string/pref_appearance_thumbnails_nsfw_show_key"
                            android:dependency="@string/pref_appearance_thumbnails_show_key"
                            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
