<?xml version="1.0" encoding="utf-8"?>

<!--
 This file was either copied or modified from https://github.com/QuantumBadger/RedReader
 under the Free Software Foundation General Public License version 3*/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <MultiSelectListPreference
        android:dialogTitle="@string/pref_menus_mainmenu_useritems_title"
        android:key="@string/pref_menus_mainmenu_useritems_key"
        android:title="@string/pref_menus_mainmenu_useritems_title"
        android:entries="@array/pref_menus_mainmenu_useritems_items"
        android:entryValues="@array/pref_menus_mainmenu_useritems_items_return"
        android:defaultValue="@array/pref_menus_mainmenu_useritems_items_default" />

    <CheckBoxPreference android:title="@string/pref_appearance_hide_username_main_menu_title"
                        android:key="@string/pref_appearance_hide_username_main_menu_key"
                        android:defaultValue="false"/>

	<CheckBoxPreference android:title="@string/pref_appearance_show_blocked_subreddits_main_menu_title"
						android:key="@string/pref_appearance_show_blocked_subreddits_main_menu_key"
						android:defaultValue="false"/>

    <MultiSelectListPreference
        android:dialogTitle="@string/pref_menus_post_context_items_title"
        android:key="@string/pref_menus_post_context_items_key"
        android:title="@string/pref_menus_post_context_items_title"
        android:entries="@array/pref_menus_post_context_items"
        android:entryValues="@array/pref_menus_post_context_items_return"
        android:defaultValue="@array/pref_menus_post_context_items_return" />

    <MultiSelectListPreference
        android:dialogTitle="@string/pref_menus_post_toolbar_items_title"
        android:key="@string/pref_menus_post_toolbar_items_key"
        android:title="@string/pref_menus_post_toolbar_items_title"
        android:entries="@array/pref_menus_post_toolbar_items"
        android:entryValues="@array/pref_menus_post_toolbar_items_return"
        android:defaultValue="@array/pref_menus_post_toolbar_items_return" />

    <MultiSelectListPreference
        android:dialogTitle="@string/pref_menus_optionsmenu_items_title"
        android:key="@string/pref_menus_optionsmenu_items_key"
        android:title="@string/pref_menus_optionsmenu_items_title"
        android:entries="@array/pref_menus_optionsmenu_items_items"
        android:entryValues="@array/pref_menus_optionsmenu_items_items_return"
        android:defaultValue="@array/pref_menus_optionsmenu_items_items_default" />

	<MultiSelectListPreference
			android:dialogTitle="@string/pref_menus_link_context_items_title"
			android:key="@string/pref_menus_link_context_items_key"
			android:title="@string/pref_menus_link_context_items_title"
			android:entries="@array/pref_menus_link_context_items"
			android:entryValues="@array/pref_menus_link_context_items_return"
			android:defaultValue="@array/pref_menus_link_context_items_default" />

	<MultiSelectListPreference
			android:dialogTitle="@string/pref_menus_subreddit_context_items_title"
			android:key="@string/pref_menus_subreddit_context_items_key"
			android:title="@string/pref_menus_subreddit_context_items_title"
			android:entries="@array/pref_menus_subreddit_context_items"
			android:entryValues="@array/pref_menus_subreddit_context_items_return"
			android:defaultValue="@array/pref_menus_subreddit_context_items_default" />

</PreferenceScreen>
