<?xml version="1.0" encoding="utf-8"?>

<!--
 This file was either copied or modified from https://github.com/QuantumBadger/RedReader
 under the Free Software Foundation General Public License version 3*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner android:id="@+id/pm_send_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"/>

	<EditText android:id="@+id/pm_send_recipient"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:layout_margin="10dp"
			  android:singleLine="true"
			  android:scrollHorizontally="true"
			  android:scrollbars="none"
			  android:inputType="textNoSuggestions"
			  android:hint="@string/pm_send_hint_recipient"/>

	<EditText android:id="@+id/pm_send_subject"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:layout_margin="10dp"
			  android:singleLine="true"
			  android:scrollHorizontally="true"
			  android:scrollbars="none"
			  android:inputType="textNoSuggestions"
			  android:maxLength="100"
			  android:hint="@string/pm_send_hint_subject"/>

    <EditText android:id="@+id/pm_send_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:singleLine="false"
              android:scrollHorizontally="false"
              android:scrollbars="none"
              android:inputType="textCapSentences|textMultiLine"
	 		  android:hint="@string/pm_send_hint_message_text"/>

</LinearLayout>
